[tool.poetry]
name = "lolml"
version = "0.1.0"
description = "A small ML project for predicting LOL match winners"
authors = ["Mark Bugden <mathphys@mark-bugden.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
requests = "^2.31.0"
ipykernel = "^6.29.4"
black = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
